US16644/US16224 - fix broken styles from merge

--- a/app/containers/my-performance/my-performance.component.scss
+++ b/app/containers/my-performance/my-performance.component.scss
@@ -1,4 +1,9 @@
-.my-performance-table {
+my-performance-table {
   display: inline-block;
   width: 50%;
+  min-width: 565px;
+
+  &.right {
+    box-shadow: -10px 0 20px #b4b4b4;
+  }
 }
