--- a/app/shared/components/my-performance-table-row/my-performance-table-row.component.scss
+++ b/app/shared/components/my-performance-table-row/my-performance-table-row.component.scss
@@ -1,11 +1,7 @@
 .performance-table-wrapper {
   width: 50%;
-  min-width: 400px;
+  min-width: 565px;
   display: inline-block;
-}
-
-.my-performance-table {
-  border: 1px solid #999;
 }
 
 td {
@@ -19,7 +15,7 @@ th {
 
 tr {
   width: 100%;
-  min-width: 400px;
+  min-width: 565px;
   position: relative;
 }
 
