--- a/app/shared/components/my-performance-table/my-performance-table.component.scss
+++ b/app/shared/components/my-performance-table/my-performance-table.component.scss
@@ -1,5 +1,7 @@
 .performance-table-wrapper {
-  width: 100%;
+  width: 50%;
+  min-width: 565px;
+  display: inline-block;
 }
 
 .performance-table-summary {
